Make Description a sentence.

--- a/NanoStringBase/DESCRIPTION
+++ b/NanoStringBase/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: NanoStringBase
 Title: NanoString Base
-Description: Base package for NanoString Technologies
+Description: Base package for NanoString Technologies.
 Version: 0.0.1
 Encoding: UTF-8
 Author: Patrick Aboyoun
