--- a/NanoStringBase/NAMESPACE
+++ b/NanoStringBase/NAMESPACE
@@ -8,7 +8,7 @@ importClassesFrom(methods, character, environment, matrix, missing)
 importMethodsFrom(Biobase, AnnotatedDataFrame, annotatedDataFrameFrom,
                   annotation, exprs, fData, featureData, pData, phenoData,
                   protocolData, sampleNames)
-importFrom(Biobase, assayDataNew, MIAME)
+importFrom(Biobase, assayDataNew, copyEnv, MIAME)
 importFrom(Biostrings, BStringSet, DNAStringSet)
 importFrom(methods, callGeneric, is, new, validObject)
 importFrom(utils, read.csv, write.csv)
