Add geomMean function for calculating the geometric mean

--- a/NanoStringBase/NAMESPACE
+++ b/NanoStringBase/NAMESPACE
@@ -32,7 +32,8 @@ exportMethods(esApply, subset)
 ### - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 ### Export non-generic functions
 
-export(readNanoStringRccSet,
+export(geomMean,
+       readNanoStringRccSet,
        readRccFile,
        readRlfFile,
        writeNanoStringRccSet)
