Add RUnit test framework

--- a/NanoStringBase/DESCRIPTION
+++ b/NanoStringBase/DESCRIPTION
@@ -5,8 +5,9 @@ Version: 0.0.1
 Encoding: UTF-8
 Author: Patrick Aboyoun
 Maintainer: Patrick Aboyoun <paboyoun@nanostring.com>
-Depends: R (>= 3.3.0), Biobase, Biostrings, S4Vectors
+Depends: R (>= 3.3.0), Biobase, BiocGenerics, Biostrings, S4Vectors
 Imports: methods, stats, utils
+Suggests: RUnit
 License: Artistic-2.0
 Collate: RccMetadata.R
          NanoStringRccSet-class.R
@@ -16,3 +17,4 @@ Collate: RccMetadata.R
          readNanoStringRccSet.R
          writeNanoStringRccSet.R
          skewness.R
+         zzz.R
