--- a/NanoStringBase/DESCRIPTION
+++ b/NanoStringBase/DESCRIPTION
@@ -16,5 +16,5 @@ Collate: RccMetadata.R
          readRlfFile.R
          readNanoStringRccSet.R
          writeNanoStringRccSet.R
-         skewness.R
+         Summary.R
          zzz.R
