Add new log2c0 function for safe log2 transformations

--- a/NanoStringBase/DESCRIPTION
+++ b/NanoStringBase/DESCRIPTION
@@ -16,5 +16,6 @@ Collate: RccMetadata.R
          readRlfFile.R
          readNanoStringRccSet.R
          writeNanoStringRccSet.R
+         Math.R
          Summary.R
          zzz.R
