Add new background correction helper functions.

--- a/NanoStringBase/DESCRIPTION
+++ b/NanoStringBase/DESCRIPTION
@@ -18,4 +18,5 @@ Collate: RccMetadata.R
          writeNanoStringRccSet.R
          Math.R
          Summary.R
+         background.R
          zzz.R
