Add fgScale function as a normalization helper funciton

--- a/NanoStringBase/NAMESPACE
+++ b/NanoStringBase/NAMESPACE
@@ -54,5 +54,5 @@ export(readNanoStringRccSet,
        readRccFile,
        readRlfFile,
        writeNanoStringRccSet,
-       bgThresh, bgSubtr,
+       bgThresh, bgSubtr, fgScale,
        log2c0)
