Rename log2c0 function as log2t and add optional threshold argument

--- a/NanoStringBase/NAMESPACE
+++ b/NanoStringBase/NAMESPACE
@@ -55,4 +55,4 @@ export(readNanoStringRccSet,
        readRlfFile,
        writeNanoStringRccSet,
        bgThresh, bgSubtr, fgScale,
-       log2c0)
+       log2t)
