Subset signatureWeights in [,NanoStringRccSet method

--- a/NanoStringBase/NAMESPACE
+++ b/NanoStringBase/NAMESPACE
@@ -44,7 +44,7 @@ export(NanoStringRccSet,
 exportMethods(NanoStringRccSet,
               sData, svarLabels,
               signatureWeights, "signatureWeights<-",
-              summary, subset,
+              summary, "[", subset,
               endogenousSubset, housekeepingSubset,
               negativeControlSubset, positiveControlSubset,
               controlSubset, nonControlSubset,
