Add signatureSubset generic and method for NanoStringRccSet

--- a/NanoStringBase/NAMESPACE
+++ b/NanoStringBase/NAMESPACE
@@ -34,7 +34,7 @@ export(NanoStringRccSet,
        signatureWeights, "signatureWeights<-",
        endogenousSubset, housekeepingSubset,
        negativeControlSubset, positiveControlSubset,
-       controlSubset, nonControlSubset,
+       controlSubset, nonControlSubset, signatureSubset,
        endogenousApply, housekeepingApply,
        negativeControlApply, positiveControlApply,
        esBy)
@@ -49,7 +49,7 @@ exportMethods(NanoStringRccSet,
               summary, "[", subset,
               endogenousSubset, housekeepingSubset,
               negativeControlSubset, positiveControlSubset,
-              controlSubset, nonControlSubset,
+              controlSubset, nonControlSubset, signatureSubset,
               esApply, endogenousApply, housekeepingApply,
               negativeControlApply, positiveControlApply,
               esBy, transform, with)
